--- a/KosaESS/src/main/resources/templates/admin/class_list.html
+++ b/KosaESS/src/main/resources/templates/admin/class_list.html
@@ -145,7 +145,7 @@
 							th:value="${class.clssId}"></td>
 						<td th:text="${class.clssId}"></td>
 						<td><a th:text="${class.clssNm}"
-							th:href="@{/manager/class/__${class.clssId}__}"></a></td>
+							th:href="@{/admin/class/__${class.clssId}__}"></a></td>
 						<td th:text="|${class.aplyStartDt} ~ ${class.aplyEndDt}|"></td>
 						<td th:text="|${class.clssStartDd} ~ ${class.clssEndDd}|"></td>
 						<td th:text="${class.clssAdr}">class address</td>
