--- a/KosaESS/bin/src/main/resources/templates/student/inquiry_list.html
+++ b/KosaESS/bin/src/main/resources/templates/student/inquiry_list.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<link th:href="@{/css/student_header.css}" rel="stylesheet">
-<link th:href="@{/css/student_main.css}" rel="stylesheet">
+<link th:href="@{/css/student/header.css}" rel="stylesheet">
+<link th:href="@{/css/student/main.css}" rel="stylesheet">
 <meta charset="UTF-8">
 <title>main page</title>
 </head>
@@ -24,12 +24,12 @@
 						<th>조회수</th>
 						<th>상태</th>
 					</tr>
-					<tr th:each="postVO : ${postList}">
-						<td></td>
+					<tr th:each="postVO, rowStat : ${postList}">
+						<td><span th:text="${rowStat.index + 1}"></span></td>
 						<td><a th:text="${postVO.postTitle}"
-							th:href="@{/inquiry/__${postVO.postId}__}">문의사항 제목</a></td>
+							th:href="@{/student/inquiry/__${postVO.postId}__}">문의사항 제목</a></td>
 						<td th:text="${postVO.rgsterId}">작성자</td>
-						<td th:text="${postVO.rgstDd}">등록일자</td>
+						<td th:text="${postVO.rgstDt}">등록일자</td>
 						<td th:text="${postVO.postHit}">조회수</td>
 						<td th:text="${postVO.postCd}">상태</td>
 					</tr>
