--- a/KosaESS/bin/src/main/resources/static/css/student/main.css
+++ b/KosaESS/bin/src/main/resources/static/css/student/main.css
@@ -4,8 +4,7 @@
 	justify-content: center;
 	flex-shrink: 0;
 	color: #0E5881;
-	text-align: center;
-	font-size: 20px;
+	font-size: 18px;
 	margin: 30px 0;
 }
 
@@ -23,14 +22,24 @@ body {
 	margin-top: 100px;
 }
 
-.content {
+.maincontent {
 	display: flex;
 	justify-content: space-between;
+}
+
+.content {
+	display: flex;
+	justify-content: center;
 }
 
 .con {
 	background: #E7EFF3;
 	padding: 4%;
+}
+
+.con2 {
+	background: #E7EFF3;
+	padding: 5%;
 }
 
 h2 {
@@ -57,7 +66,8 @@ table a:hover {
 hr {
 	border: 0px;
 	border-top: 5px solid #0E5881;
-	margin-bottom:2%;
+	margin-bottom: 2%;
+	margin-top: 0;
 }
 
 table td {
@@ -69,6 +79,8 @@ table td {
 
 .login {
 	text-align: center;
+	display: grid;
+	align-items: center;
 }
 
 .login a {
@@ -80,7 +92,6 @@ table td {
 	padding: 15px;
 	margin: 5px 0;
 	border: 0;
-	width: 60%;
 	font-size: 15px;
 	font-weight: bold;
 	border-radius: 10px;
@@ -93,32 +104,77 @@ input::placeholder {
 .loginBtn {
 	background: #0E5881;
 	color: white;
+	margin: 2% auto;
+	cursor: pointer;
+}
+
+.wlogBtn {
+	background: #0E5881;
+	color: white;
+	cursor: pointer;
+	text-align: center;
+	height: 100%;
+	
 }
 
 .submit {
-	margin-top: 3%;
+	align-content: center;
 }
 
 .my {
 	display: flex;
-	justify-content: space-evenly;
-	margin-top: 7%;
+	justify-content: space-around;;
 }
 
 .box {
-	width: 30%;
-	padding: 3%;
-	border-style: solid;
-	font-size: 15px;
+	width: 40%;
+	font-size: 12px;
 }
 
 .box h3 {
-	margin: 5% 0px;
+	margin: 6% 0px;
 }
 
 .box a {
-	font-size: 30px;
+	font-size: 20px;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.box span {
+	font-size: 17px;
+	text-decoration: none;
+		color: black;
+	
+}
+
+.plus {
+	font-size: 25px;
 	color: #0E5881;
 	text-decoration: none;
 	font-weight: bold;
+}
+
+.my {
+	text-align: center;
+}
+
+.inouttm {
+	display: flex;
+	flex-direction: column;
+	width: 70%;
+}
+
+.inoutform {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin-top: 2%;
+}
+
+.login span {
+	font-weight: bold;
+}
+.checktm{
+	text-align: center;
 }
