--- a/KosaESS/bin/src/main/resources/templates/include/manager_header.html
+++ b/KosaESS/bin/src/main/resources/templates/include/manager_header.html
@@ -3,5 +3,8 @@
 <head th:fragment="header">
 <meta charset="UTF-8">
 <link th:href="@{/css/manager_subbar.css}" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
