--- a/KosaESS/bin/src/main/resources/templates/manager_class_list.html
+++ b/KosaESS/bin/src/main/resources/templates/manager_class_list.html
@@ -42,75 +42,105 @@
 		<div class="content_wrap">
 			<!-- 검색 필터 부분 -->
 			<div class="search_filter_wrap">
-				<!-- 아이콘 삽임 부분 -->
-				<div class="search_filter_icon">
-					<img class="search_filter_icon_img" th:src="@{/img/filter.png}">
+				<!-- 검색 필터 테이블 wrap-->
+				<div class="search_filter_table_wrap">
+					<!-- 검색 필터 테이블 -->
+					<table class="search_filter_table" style="width: 100%; border: none;">
+						<tr>
+							<th style="width: 25%;">교육과정명</th>
+							<th style="width: 25%;">상태</th>
+							<th style="width: 25%;">지원기간</th>
+							<th style="width: 25%;">교육기간</th>
+						</tr>
+						<tr th:if="${session.role == 'admin'}">
+							<td style="width: 25%;"><input id="class_name"
+								placeholder="교육과정명" style="width: 100%; height: 40px;" type="text"
+								list="search_option"> <datalist id="search_option">
+								</datalist></td>
+							<td style="width: 25%;">
+								<div style="width: 90%;"id="list1" class="dropdown-check-list" tabindex="100">
+									<span style="width: 100%;padding: 10px;" class="anchor"><input type="checkbox" checked="checked">전체</span>
+									<ul style="list-style-type: none;" class="items" th:each="classCodeName:${classCodeNameList}">
+										<li>
+										<label>
+										<input type="checkbox" id ="chk_status" name="chk_status" checked="checked"
+												th:value="${classCodeName}"><span th:text="${classCodeName}">status</span>
+										</label>		
+										</li>
+									</ul>
+								</div>
+							</td>
+							<td style="width: 25%;"><input style="height: 40px;" id="aply_start_dt"
+								type="date"> <span> ~ </span> <input style="height: 40px;" id="aply_end_dt"
+								type="date"></td>
+							<td style="width: 25%;"><input style="height: 40px;" id="class_start_dd"
+								type="date"> <span> ~ </span> <input style="height: 40px;" id="class_end_dd"
+								type="date"></td>
+							<td>
+								<!-- 검색 버튼 -->
+								<div class="search_filter_btn_wrap">
+									<button id="search_btn" class="search_filter_btn">검색</button>
+								</div> <!-- End 검색 버튼 -->
+							</td>
+						</tr>
+					</table>
+					<!-- 검색 필터 테이블 끝-->
 				</div>
-				<!-- 아이콘 삽임 부분 -->
+				<!-- 검색 필터 테이블 wrap 끝 -->
 			</div>
-
-			<!-- 검색 필터 테이블 -->
-			<div class="search_filter_table_wrap">
-				<table class="search_filter_table" style="width: 100%;">
-					<tr>
-						<td style="width: 10%;">교육과정명</td>
-						<td style="width: 30%;"><input id="class_name"
-							placeholder="교육과정명" style="width: 100%;" type="text"
-							list="search_option"> <datalist id="search_option">
-							</datalist></td>
-						<td style="width: 10%;">상태</td>
-						<td style="width: 50%;"><span
-							th:each="classCodeName:${classCodeNameList}"> <label>
-									<input type="checkbox" name="chk_status" checked="checked"
-									th:value="${classCodeName}"> [[${classCodeName}]]
-							</label>
-						</span></td>
-
+			<!-- 검색 필터 부분 끝-->
+			
+			<!-- 컨텐츠 개수와 버튼 wrap -->
+			<div class="middle_content">
+				<span> 총 </span>
+				<span th:text="${#lists.size(classList)}" > cnt </span>
+				<span> 개 </span>
+				
+				<!-- 선택삭제 버튼 -->
+				<span>
+					<button>선택삭제</button>
+				</span>
+				
+				<!-- 등록하기 버튼 -->
+				<span>
+					<a th:href="@{/admin/class/create}"><button>등록하기</button></a>
+				</span>
+			</div>
+			<!-- 컨텐츠 개수와 버튼 wrap 끝-->
+					
+			
+			<!-- 컨텐츠 리스트 부분 -->
+			<div class="content_list">
+				<table class="content_list_table" id="class_list_table">
+					<tr style="background: #CFDEE6;">
+						<th><input type="checkbox" name="chk" id="chkAll"></th>
+						<th th:if="${session.role != 'admin'}">번호</th>
+						<th th:if="${session.role == 'admin'}">ID</th>
+						<th>프로그램명</th>
+						<th th:if="${session.role == 'admin'}">지원기간</th>
+						<th>교육기간</th>
+						<th>교육 장소</th>
+						<th>신청/최대</th>
+						<th>교육상태</th>
 					</tr>
-					<tr th:if="${session.role == 'admin'}">
-						<td style="width: 10%;">지원기간</td>
-						<td style="width: 30%;"><input id="aply_start_dt" type="date">
-							<span> ~ </span> <input id="aply_end_dt" type="date"></td>
-						<td style="width: 10%;">교육기간</td>
-						<td style="width: 50%;"><input id="class_start_dd"
-							type="date"> <span> ~ </span> <input id="class_end_dd"
-							type="date"></td>
+					<tr id="class_list" th:each="class:${classList}">
+						<td><input type="checkbox" name="chk"
+							th:value="${class.clssId}"></td>
+						<td th:if="${session.role != 'admin'}"
+							th:text="${classStat.count}">row number</td>
+						<td th:if="${session.role == 'admin'}" th:text="${class.clssId}"></td>
+						<td><a th:text="${class.clssNm}"
+							th:href="@{/manager/class/__${class.clssId}__}"></a></td>
+						<td th:text="|${class.aplyStartDd} ~ ${class.aplyEndDd}|"></td>
+						<td th:text="|${class.clssStartDd} ~ ${class.clssEndDd}|"></td>
+						<td th:text="${class.clssAdr}">class address</td>
+						<td><a th:text="${class.rgstCnt}"
+							th:href="@{/manager/student-list/__${class.clssId}__}"></a><span
+							th:text="|/ ${class.limitCnt}|"></span></td>
+						<td th:text="${class.clssCd}">status</td>
 					</tr>
 				</table>
-
-				<!-- 검색 버튼 -->
-				<div class="search_filter_btn_wrap">
-					<button id="search_btn" class="search_filter_btn">검색</button>
-				</div>
-				<!-- End 검색 버튼 -->
-
 			</div>
-			<!-- End 검색 필터 부분 -->
-
-
-			<table id="class_list_table">
-				<tr>
-					<th><input type="checkbox" name="chk" id="chkAll"></th>
-					<th th:if="${session.role != 'admin'}">번호</th>
-					<th th:if="${session.role == 'admin'}">ID</th>
-					<th>프로그램명</th>
-					<th th:if="${session.role == 'admin'}">지원기간</th>
-					<th>교육기간</th>
-					<th>교육 장소</th>
-					<th>신청/최대</th>
-					<th>교육상태</th>
-				</tr>
-				<tr id="class_list" th:each="class:${classList}">
-					<td><input type="checkbox" name="chk" th:value="${class.clssId}"></td>
-					<td th:if="${session.role != 'admin'}" th:text="${classStat.count}">row number</td>
-					<td th:if="${session.role == 'admin'}" th:text="${class.clssId}"></td>
-					<td><a th:text="${class.clssNm}" th:href="@{/manager/class/__${class.clssId}__}"></a></td>
-					<td th:text="|${class.clssStartDd} ~ ${class.clssEndDd}|">
-					<td th:text="${class.clssAdr}">class address</td>
-					<td><a th:text="${class.rgstCnt}" th:href="@{/manager/student-list/__${class.clssId}__}"></a><span th:text="|/ ${class.limitCnt}|"></span></td>
-					<td th:text="${class.clssCd}">status</td>
-				</tr>
-			</table>
 		</div>
 	</div>
 
@@ -123,6 +153,15 @@
 				chk.checked = chkAll.checked;
 			}
 		});
+		
+		//dropdown checkbox
+		var checkList = document.getElementById('list1');
+		checkList.getElementsByClassName('anchor')[0].onclick = function(evt) {
+		  if (checkList.classList.contains('visible'))
+		    checkList.classList.remove('visible');
+		  else
+		    checkList.classList.add('visible');
+		}
 		
 		//검색 클릭 이벤트
 		const searchBtn = document.querySelector("#search_btn");
@@ -178,8 +217,8 @@
 		                           '<tr><td><input type="checkbox" name="chk" th:value="'+
 		                              response[i].clssId+'"></td>'+
 		                              '<td>'+response[i].clssId+'</td>'+
-		                              '<td><a class="content_title" th:href="@{/manager/class/__'+response[i].clssId +
-		                                 '__}">'+response[i].clssNm+'</a></td>' +      
+		                              '<td>'+'<a class="content_title" href="/manager/class/'+response[i].clssId +
+		                                 '">'+response[i].clssNm+'</a></td>' +      
 		                        '<td><span>'+response[i].aplyStartDt+'</span> <br>~<br>'+
 		                        '<span>'+response[i].aplyEndDt+'</span></td>'+
 		                        '<td><span>'+response[i].clssStartDd+'</span> <br>~<br>'+
