--- a/KosaESS/src/main/resources/templates/manager/class_detail.html
+++ b/KosaESS/src/main/resources/templates/manager/class_detail.html
@@ -40,7 +40,7 @@
 					<td th:text="${clss.clssCd}"></td>
 					<td th:text="${#dates.format(clss.setInTm, 'HH:mm')}"></td>
 					<td th:text="${#dates.format(clss.setOutTm, 'HH:mm')}"></td>
-					<td><a th:text ="${clss.rgstCnt}" th:href="@{/manager/student-list/__${clss.clssId}__}"></a><span th:text="| / ${clss.limitCnt}|"></span></td><!--req_param 추가할것 -->
+					<td><a th:text ="${clss.rgstCnt}" th:href="@{/manager/student/__${clss.clssId}__}"></a><span th:text="| / ${clss.limitCnt}|"></span></td><!--req_param 추가할것 -->
 					<td th:text="${clss.mngrId}"></td>
 				</tr>
 			</table>
