--- a/KosaESS/src/main/resources/templates/manager/class_list.html
+++ b/KosaESS/src/main/resources/templates/manager/class_list.html
@@ -3,34 +3,35 @@
 <head th:replace="~{/include/manager_header :: header}">
 <meta charset="UTF-8">
 <title>Manager Class List</title>
-<link th:href="@{/css/managerClassList.css}" rel="stylesheet" />
+<link th:href="@{/css/manager/managerClassList.css}" rel="stylesheet" />
 </head>
 <head>
-<link th:href="@{/css/manager_post_list.css}" rel="stylesheet">
+<link th:href="@{/css/manager/manager_post_list.css}" rel="stylesheet">
+<!-- 자동완성기능 : 사실 뭔지 몰?루 -->
 <script>
-		$(document).ready(function(){
-			$('#class_name').on('input', function() {
-                var searchTerm = $(this).val();
-                if (searchTerm.length >= 1) {
-                    $.ajax({
-                        url: '/admin/class/autocomplete', // 서버의 엔드포인트 URL
-                        method: 'GET',
-                        data: { term: searchTerm },
-                        success: function(response) {
-                            $('#search_option').html(response);
-                        }
-                    });
-                } else {
-                    $('#search_option').empty();
-                }
-			});
-		});
+ 		$(document).ready(function(){
+ 			$('#class_name').on('input', function() {
+				var searchTerm = $(this).val();
+				if (searchTerm.length >= 1) {
+					$.ajax({
+						url: '/admin/class/autocomplete', // 서버의 엔드포인트 URL
+						method: 'GET',
+						data: { term: searchTerm },
+						success: function(response) {
+							$('#search_option').html(response);
+						}
+					});
+				} else {
+					$('#search_option').empty();
+				}
+ 			});
+ 		});
 </script>
 </head>
 <body>
 
 	<!-- 서브바 부분 -->
-	<div th:replace="~{/include/manager_subbar :: subbar}"></div>
+	<div th:replace="~{/include/manager_subbar_2 :: subbar}"></div>
 	<!-- End 서브바 -->
 
 	<!-- 컨텐츠 부분 -->
@@ -43,54 +44,56 @@
 			<!-- 검색 필터 부분 -->
 			<div class="search_filter_wrap">
 				<!-- 아이콘 삽임 부분 -->
-				<div class="search_filter_icon">
-					<img class="search_filter_icon_img" th:src="@{/img/filter.png}">
-				</div>
+				<!-- 				<div class="search_filter_icon"> -->
+				<!-- 					<img class="search_filter_icon_img" th:src="@{/img/filter.png}"> -->
+				<!-- 				</div> -->
 				<!-- 아이콘 삽임 부분 -->
-			</div>
 
-			<!-- 검색 필터 테이블 -->
-			<div class="search_filter_table_wrap">
-				<table class="search_filter_table" style="width: 100%;">
-					<tr>
-						<td style="width: 10%;">교육과정명</td>
-						<td style="width: 30%;"><input id="class_name" placeholder="교육과정명" style="width: 100%;" type="text" list="search_option">
-							<datalist id="search_option">
-								<option th:each="class:${classList}" th:value = "${class.clssNm}">
-							</datalist>
-						</td>
-						<td style="width: 10%;">상태</td>
-						<td style="width: 50%;">
-							<span>
-								 <label th:text="전체"></label>
-								 <input type="checkbox" name="chk_status" checked="checked" value="CheckAllCodeName"><!-- ←←←←←← value 수정필요 -->
+				<!-- 검색 필터 테이블 -->
+				<div class="search_filter_table_wrap">
+					<table class="search_filter_table" style="width: 100%;">
+						<tr>
+							<td style="width: 10%;">교육과정명</td>
+							<td style="width: 30%;">
+							<input id="class_name" placeholder="교육과정명" style="width: 100%;" type="text" list="search_option">
+								<datalist id="search_option">
+									<option th:each="class:${classList}" th:value="${class.clssNm}">
+								</datalist>
+							</td>
+							<td style="width: 10%;">상태</td>
+							<td style="width: 50%;"><span> <label th:text="전체"></label> <input type="checkbox" name="chk_status" checked="checked" value="CheckAllCodeName"> <!-- ←←←←←← value 수정필요 -->
 							</span>
-							<span th:each="classCodeName:${classCodeNameList}" >
-								 <label th:text="${classCodeName.cmcdNm}"></label>
-								 <input type="checkbox" name="chk_status" checked="checked" value="${classCodeName.cmcdId}">
-							</span>
-						</td>
-					</tr>
-					<tr th:if="${session.role == 'admin'}">
-						<td style="width: 10%;">지원기간</td>
-						<td style="width: 30%;"><input id="aply_start_dt" type="date"> <span> ~ </span> <input id="aply_end_dt" type="date"></td>
-						<td style="width: 10%;">교육기간</td>
-						<td style="width: 50%;"><input id="class_start_dd" type="date"> <span> ~ </span> <input id="class_end_dd" type="date"></td>
-					</tr>
-				</table>
+							<span th:each="classCodeName:${classCodeNameList}"> <label th:text="${classCodeName.cmcdNm}"></label> <input type="checkbox" name="chk_status" checked="checked" value="${classCodeName.cmcdId}">
+							</span></td>
+						</tr>
+						<tr th:if="${session.role == 'admin'}">
+							<td style="width: 10%;">지원기간</td>
+							<td style="width: 30%;">
+								<input id="aply_start_dt" type="date">
+								<span> ~ </span>
+								<input id="aply_end_dt" type="date">
+							</td>
+							<td style="width: 10%;">교육기간</td>
+							<td style="width: 50%;"><input id="class_start_dd"
+								type="date"> <span> ~ </span> <input id="class_end_dd"
+								type="date"></td>
+						</tr>
+					</table>
 
-				<!-- 검색 버튼 -->
-				<div class="search_filter_btn_wrap">
-					<button id="search_btn" class="search_filter_btn">검색</button>
+					<!-- 검색 버튼 -->
+					<div class="search_filter_btn_wrap">
+						<button id="search_btn" class="search_filter_btn">검색</button>
+					</div>
+					<!-- End 검색 버튼 -->
+
 				</div>
-				<!-- End 검색 버튼 -->
-
 			</div>
 			<!-- End 검색 필터 부분 -->
 
 			<table id="class_list_table">
 				<tr>
-					<th th:if="${session.role == 'admin'}"><input type="checkbox" name="chk" id="chkAll"></th>
+					<th th:if="${session.role == 'admin'}"><input type="checkbox"
+						name="chk" id="chkAll"></th>
 					<th th:if="${session.role != 'admin'}">번호</th>
 					<th th:if="${session.role == 'admin'}">ID</th>
 					<th>프로그램명</th>
@@ -100,14 +103,19 @@
 					<th>수강/정원</th>
 					<th>교육상태</th>
 				</tr>
-				<tr id="class_list" th:each="class:${classList}" >
-					<td th:if="${session.role == 'admin'}"><input type="checkbox" name="chk" th:value="${class.clssId}"></td>
-					<td th:if="${session.role != 'admin'}" th:text="${classStat.count}">row number</td>
+				<tr id="class_list" th:each="class:${classList}">
+					<td th:if="${session.role == 'admin'}"><input type="checkbox"
+						name="chk" th:value="${class.clssId}"></td>
+					<td th:if="${session.role != 'admin'}" th:text="${classStat.count}">row
+						number</td>
 					<td th:if="${session.role == 'admin'}" th:text="${class.clssId}"></td>
-					<td><a th:text="${class.clssNm}" th:href="@{/manager/class/__${class.clssId}__}"></a></td>
+					<td><a th:text="${class.clssNm}"
+						th:href="@{/manager/class/__${class.clssId}__}"></a></td>
 					<td th:text="|${class.clssStartDd} ~ ${class.clssEndDd}|">
 					<td th:text="${class.clssAdr}">class address</td>
-					<td><a th:text="${class.rgstCnt}" th:href="@{/manager/student-list/__${class.clssId}__}"></a><span th:text="|/ ${class.limitCnt}|"></span></td>
+					<td><a th:text="${class.rgstCnt}"
+						th:href="@{/manager/student/__${class.clssId}__}"></a><span
+						th:text="|/ ${class.limitCnt}|"></span></td>
 					<td th:text="${class.clssCd}">status</td>
 				</tr>
 			</table>
