--- a/KosaESS/src/main/resources/static/css/admin/applicant_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/applicant_list.css
@@ -1,3 +1,8 @@
+a {
+	text-decoration-line: none;	
+	color: #0E5881;
+}
+
 .sidebar.open ~ .home-section {
 	left: 250px;
 	width: calc(100% - 250px);
@@ -23,69 +28,54 @@
 	font-size: 20px;
 	color: #333333;
 	font-weight: bold;
-	width: 87%;
+	width: 80%;
 }
 
 .home-section .content_top .route a {
-	width: 13%;
+	width: 20%;
 	color: #0E5881;
 	text-decoration-line: none;
 	font-weight: bold;
 }
 
-.home-section .content_middle {
-	margin: 40px;
-	display: flex;
-	border-top: 2px solid #0E5881;
-	border-bottom: 1px solid #0E5881;
-	padding: 5px;
-	background: #E7EFF3;
-}
 
-.home-section .content_middle .search_filter_wrap {
+.content_middle .class_summary {
 	width: 90%;
-	display: flex;
+	border-top: 2px solid #0E5881;
+	
+	margin: 40px;
 }
 
-.home-section .content_middle .search_filter_wrap .filter_box {
+.content_middle .class_summary .row {
 	display: flex;
-	margin: 3px 20px 3px 20px;
+	border-bottom: 1px solid #0E5881;
+	height: 30px;
+}
+
+.content_middle .class_summary .row .col {
+	display: flex;
+	font-weight: bold;
 	color: #0E5881;
-	font-weight: bold;
-	font-size: 15px;
 }
 
-.home-section .content_middle .search_filter_wrap .filter_box .filter_box_title
-	{
-	margin-right: 20px;
-}
-
-.home-section .content_middle .search_filter_btn_wrap {
-	width: 10%;
-	display: flex;
-}
-
-.search_filter_btn_wrap button {
+.content_middle .class_summary .row .col .col_title {
+	background: #E7EFF3;
 	text-align: center;
-	color: white;
-	font-weight: bold;
-	border: none;
-	margin: 2px;
-	border-radius: 3px;
-	padding: 5px;
-	display: flex;
+	width: 100px;
 }
 
-.search_filter_btn_wrap button img {
-	width: 20px;
+.content_middle .class_summary .row .col .col_content {
+	padding-left: 10px;
 }
 
-.search_filter_btn_wrap .search_reset_btn {
-	background: #9FBCCD;
+
+.content_middle .class_summary .row .col .col_content a {
+	text-decoration-line: none;	
+	color: #0E5881;
 }
 
-.search_filter_btn_wrap .search_filter_btn {
-	background: #0E5881;
+.content_middle .class_summary .row .col .col_content a:hover {
+	border-bottom: 2px solid #0E5881;
 }
 
 .home-section .content_bottom {
@@ -103,10 +93,6 @@
 	color: #0E5881;
 }
 
-.home-section .content_bottom .content_info_wrap img{
-	width: 20px;	
-}
-
 .content_info_wrap .content_info {
 	padding: 5px;
 	width:88%;
@@ -117,7 +103,7 @@
 	float:right;
 }
 
-.content_info_wrap .content_info_btn_wrap button {
+.content_info_wrap .content_info_btn_wrap input {
 	background: #0E5881;
 	color: white;
 	border: none;
@@ -127,9 +113,6 @@
 	margin: 2px;
 	padding: 5px;
 }
-
-
-
 
 .content_list {
 	width: 100%;
@@ -158,7 +141,6 @@
 	border: 1px solid #CFDEE6;
 	padding:5px;
 }
-
 .content_list_table tr td a {
 	text-decoration: none;
 	color: #0E5881;
@@ -170,9 +152,3 @@
 	font-weight: bold;
 	text-decoration: underline;
 }
-
-
-
-
-
-
