--- a/KosaESS/src/main/resources/templates/admin/class_list.html
+++ b/KosaESS/src/main/resources/templates/admin/class_list.html
@@ -149,7 +149,7 @@
 						<td th:text="|${class.aplyStartDt} ~ ${class.aplyEndDt}|"></td>
 						<td th:text="|${class.clssStartDd} ~ ${class.clssEndDd}|"></td>
 						<td th:text="${class.clssAdr}">class address</td>
-						<td><span th:text="${class.limitCnt}"></span></td>
+						<td><a th:href="@{/admin/class/__${class.clssId}__/applicant}"><span th:text="${class.limitCnt}"></span></a></td>
 						<td th:text="${class.clssCd}">status</td>
 					</tr>
 				</table>
