--- a/KosaESS/src/main/resources/static/css/student/class_list.css
+++ b/KosaESS/src/main/resources/static/css/student/class_list.css
@@ -16,7 +16,7 @@ ul {
 	background: #E7EFF3;
 	padding: 0px 5%;
 	align-items: center;
-	justify-content: end;
+	justify-content: space-between;
 	margin-bottom: 2%;
 }
 
@@ -35,47 +35,127 @@ input::placeholder {
 .searchBtn {
 	background: #0E5881;
 	color: white;
+	padding: 9px 2%;
+}
+
+.searchform {
+	width: 100%;
+}
+
+.searchInput {
+	width: 50%;
+	margin-left: 20%;
 }
 
 .subsearch {
 	display: flex;
 	justify-content: space-between;
 	margin-bottom: 1%;
+	align-items: center;
 }
 
-tr {
+.grid-style tr {
 	display: grid;
 	align-items: center;
 	width: 21%;
 	border: 2px solid #0E5881;
 	padding: 1%;
 	margin-bottom: 3%;
+	margin-right: 1.5%;
 }
 
-tbody {
+.grid-style tbody {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	padding-left: 2%;
 }
 
-table img {
+.grid-style img {
 	height: 60px;
 	width: 260px;
 	margin: 5% 0px;
 }
 
-table td {
+.grid-style td {
 	padding: 0.5%;
 	font-size: 12px;
 }
 
-table a {
+.grid-style a {
 	text-align: center;
+	text-decoration: none;
+	color: #0E5881;
 }
 
-.classImg {
-	text-align: center;
+.grid-style .applyBtn {
+	background: #0E5881;
+	color: white;
+	padding: 10px;
+	margin: 5px 0;
+	border: 0;
+	font-size: 10px;
+	font-weight: bold;
+	border-radius: 10px;
+	display: block;
 }
+
+.className {
+	color: red;
+	font-size: 15px;
+}
+
+--------------------------------------------------------
+
+.list-style tr {
+	display: grid;
+	align-items: center;
+	width: 21%;
+	border: 2px solid #0E5881;
+	padding: 1%;
+	margin-bottom: 3%;
+	margin-right: 1.5%;
+}
+
+.list-style .classRow {
+	display: flex;
+	justify-content: space-between;
+}
+
+.list-style .classHead {
+	display: flex;
+	justify-content: space-between;
+}
+
+.list-style tbody {
+	display: flex;
+	padding: 0 2%;
+	flex-direction: column;
+}
+
+.list-style td {
+	padding: 0.5%;
+	font-size: 12px;
+}
+
+.list-style a {
+	text-align: center;
+	text-decoration: none;
+	color: #0E5881;
+}
+
+.grid-style .applyBtn {
+	background: #0E5881;
+	color: white;
+	padding: 10px;
+	margin: 5px 0;
+	border: 0;
+	font-size: 10px;
+	font-weight: bold;
+	border-radius: 10px;
+	display: block;
+}
+
+----------------------------
 
 .totalcnt {
 	display: contents;
@@ -89,19 +169,19 @@ table a {
 	height: 30px;
 }
 
-.gridlist a {
-	text-decoration: none;
-	color: #0E5881;
+.list-view.active img {
+	content: url('/img/list_white.png'); /* 적절한 이미지 경로를 지정하세요 */
+	background: #0E5881;
 }
 
-.applyBtn {
+.grid-view.active img {
+	content: url('/img/grid_white.png'); /* 적절한 이미지 경로를 지정하세요 */
 	background: #0E5881;
-	color: white;
-	padding: 10px;
-	margin: 5px 0;
-	border: 0;
-	font-size: 10px;
-	font-weight: bold;
-	border-radius: 10px;
-	display: block;
+}
+
+.moveTopBtn {
+	padding: 0;
+	background: white;
+	border-style: none;
+	height: 60px;
 }
