--- a/KosaESS/src/main/resources/static/css/student/main.css
+++ b/KosaESS/src/main/resources/static/css/student/main.css
@@ -47,13 +47,13 @@
 }
 
 .img2 {
-	background-image: url( "/img/coding.jpg" );
+	background-image: url( "/img/banner2.jpg" );
 	content: "";
 	z-index: -1;
 }
 
 .img1 {
-	background-image: url( "/img/banner2.jpg" );
+	background-image: url( "/img/banner1.png" );
 	content: "";
 	z-index: -1;
 }
@@ -72,6 +72,7 @@ body {
 .container {
 	padding: 0px 8%;
 	margin-top: 100px;
+	margin-bottom: 3%;
 }
 
 .maincontent {
