[#add]파비콘 추가

--- a/KosaESS/src/main/resources/templates/admin/applicant_list.html
+++ b/KosaESS/src/main/resources/templates/admin/applicant_list.html
@@ -148,7 +148,7 @@
 							<td th:text="${apply.aplyId}"></td>
 							<td th:text="${apply.stdtId}"></td>
 							<td th:text="${apply.stdtNm}"></td>
-							<td><a th:href="@{/admin/filedownload}" th:text="${apply.fileNm}"></a></td>
+							<td><a th:href="@{/download/file/__${apply.fileId}__/__${apply.fileSubId}__}" th:text="${apply.fileNm}"></a></td>
 							<td th:text="${apply.rgstDt}"></td>
 							<td th:text="${apply.cmcdNm}"></td>
 						</tr>
